--- a/index.css
+++ b/index.css
@@ -108,14 +108,19 @@ body {
     button:active{
         color: red;
     }
-
-    fieldset{
+    fields{
+        color: black;
+    }
+    lables{
+        color: black;
+    }
+    .field1{
         display: flex;
         flex-direction: column;
         align-items: start;
-        gap: -5px;
+        gap: 5px;
 
-        & label{
+        .label1{
             font-family: 'Times New Roman', Times, serif;
         }
     }
